<resources>
    <string name="app_name">Maleta</string>
    <!--Default-->
    <string name="contentDescription">imageContentDescription</string>
    <!--Login-->
    <string name="hint_login_email">E-mail</string>
    <string name="hint_login_password">Senha</string>
    <string name="button_login">Login</string>
    <string name="error_input_login">Informe o seu login de acesso!</string>
    <string name="error_input_password">Informe a sua senha!</string>
    <string name="alert_first_access">Primeiro Acesso</string>
    <string name="alert_dialog_title">Alerta</string>
    <string name="menu_search_booking">Pesquisar reserva</string>
    <string name="menu_sort">Filtrar</string>
    <string name="menu_logout">Sair</string>
    <string name="user_not_found">Usuário ou senha inválidos</string>
    <string name="user_default">Usuário padrão criado com sucesso</string>
</resources>